fix(api): resolve positions by sector metadata